--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.1",
     "next": "latest",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "next-redux-wrapper": "^8.0.0",
+    "react": "^18.0.2",
+    "react-dom": "^18.0.2",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
