--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.5",
+    "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
@@ -16,6 +16,8 @@
     "next": "latest",
     "next-redux-wrapper": "^8.0.0",
     "react": "^18.0.2",
+    "react-beautiful-dnd": "^13.1.1",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.0.2",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
+    "@types/react-beautiful-dnd": "^13.1.3",
     "autoprefixer": "10.4.4",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
