--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,1 +1,9 @@
-{ "extends": ["next/core-web-vitals", "prettier"] }
+{
+  "extends": ["next/core-web-vitals", "prettier"],
+  "rules": {
+    // ...
+    "react-hooks/rules-of-hooks": ["off"], // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": ["off"],
+    "react/no-unescaped-entities":["off"] // Checks effect dependencies
+  }
+}
