--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "prettier --check --ignore-path .gitignore .",
+    "format:fix": "prettier --write --ignore-path .gitignore ."
   },
   "dependencies": {
     "@headlessui/react": "^1.7.7",
@@ -12,6 +14,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "formik": "^2.2.9",
+    "mongodb": "^4.13.0",
     "mongoose": "^6.8.1",
     "next": "latest",
     "next-redux-wrapper": "^8.0.0",
@@ -21,6 +24,8 @@
     "react-dom": "^18.0.2",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
+    "smooth-scrollbar": "^8.8.1",
+    "smooth-scrollbar-react": "^2.4.1",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -31,8 +36,9 @@
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "8.4.12",
-    "prettier": "2.6.2",
+    "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "0.1.8",
     "tailwindcss": "3.0.23",
     "typescript": "4.5.4"
